# server/transport/listings.go
@@ -18,20 +18,20 @@ var ProductPool = sync.Pool{
 	},
 }
 
-// @Summary		Create new listing
-// @Description	This endpoint allows users to create new product listings.
+//	@Summary		Create new listing
+//	@Description	This endpoint allows users to create new product listings.
 //
 // The request body must contain the product details in JSON format.
 //
-// @Tags			listings
-// @Accept			json
-// @Produce		json
-// @Param			product	body		models.Product			true	"Product details"
-// @Param			Authorization	header	string	true	"Access token"
-// @Success		200		{object}	CreateListingResponse	"Create listing response containing the product ID"
-// @Failure		422		{object}	errs.ErrorResponse		"Unprocessable entity - invalid JSON payload"
-// @Failure		500		{object}	errs.ErrorResponse		"Internal server error"
-// @Router			/listings/ [POST]
+//	@Tags			listings
+//	@Accept			json
+//	@Produce		json
+//	@Param			product			body		models.Product			true	"Product details"
+//	@Param			Authorization	header		string					true	"Access token"
+//	@Success		200				{object}	CreateListingResponse	"Create listing response containing the product ID"
+//	@Failure		422				{object}	errs.ErrorResponse		"Unprocessable entity - invalid JSON payload"
+//	@Failure		500				{object}	errs.ErrorResponse		"Internal server error"
+//	@Router			/listings [POST]
 func (t *TransportConfig) CreateNewListing(w http.ResponseWriter, r *http.Request) {
 	defer r.Body.Close()
 
@@ -61,20 +61,20 @@ func (t *TransportConfig) CreateNewListing(w http.ResponseWriter, r *http.Reques
 	}
 }
 
-// @Summary		Delete a listing
-// @Description	This endpoint allows users to delete product listings.
+//	@Summary		Delete a listing
+//	@Description	This endpoint allows users to delete product listings.
 //
 // The request must include the product ID as a query parameter.
 //
-// @Tags			listings
-// @Accept			*/*
-// @Produce		*/*
-// @Param			id	query		string				true	"Product ID"
-// @Param			Authorization	header	string	true	"Access token"
-// @Success		200	{string}	string				"Listing deleted successfully"
-// @Failure		404	{object}	errs.ErrorResponse	"Product ID not found"
-// @Failure		500	{object}	errs.ErrorResponse	"Internal server error"
-// @Router			/listings/ [DELETE]
+//	@Tags			listings
+//	@Accept			*/*
+//	@Produce		*/*
+//	@Param			id				query		string				true	"Product ID"
+//	@Param			Authorization	header		string				true	"Access token"
+//	@Success		200				{string}	string				"Listing deleted successfully"
+//	@Failure		404				{object}	errs.ErrorResponse	"Product ID not found"
+//	@Failure		500				{object}	errs.ErrorResponse	"Internal server error"
+//	@Router			/listings/ [DELETE]
 func (t *TransportConfig) DeleteListing(w http.ResponseWriter, r *http.Request) {
 	defer r.Body.Close()
 
@@ -97,17 +97,17 @@ func (t *TransportConfig) DeleteListing(w http.ResponseWriter, r *http.Request) 
 	}
 }
 
-// @Summary		Update sold status via bid
-// @Description	This endpoint updates the sold status of a product based on a successful bid. The request body must contain the bid details in JSON format.
-// @Tags			listings
-// @Accept			json
-// @Produce		json
-// @Param			bid	body		models.SellItemViaBid	true	"Details of the bid used to mark the item as sold"
-// @Param			Authorization	header	string	true	"Access token"
-// @Success		200	{string}	string					"Item marked as sold successfully"
-// @Failure		422	{object}	errs.ErrorResponse		"Unprocessable entity - invalid JSON payload"
-// @Failure		500	{object}	errs.ErrorResponse		"Internal server error"
-// @Router			/listings/sold/bid [PUT]
+//	@Summary		Update sold status via bid
+//	@Description	This endpoint updates the sold status of a product based on a successful bid. The request body must contain the bid details in JSON format.
+//	@Tags			listings
+//	@Accept			json
+//	@Produce		json
+//	@Param			bid				body		models.SellItemViaBid	true	"Details of the bid used to mark the item as sold"
+//	@Param			Authorization	header		string					true	"Access token"
+//	@Success		200				{string}	string					"Item marked as sold successfully"
+//	@Failure		422				{object}	errs.ErrorResponse		"Unprocessable entity - invalid JSON payload"
+//	@Failure		500				{object}	errs.ErrorResponse		"Internal server error"
+//	@Router			/listings/sold/bid [PUT]
 func (t *TransportConfig) UpdateSoldViaBid(w http.ResponseWriter, r *http.Request) {
 	uid, err := middleware.GetTokenFromRequest(r)
 	if err != nil {
@@ -129,22 +129,22 @@ func (t *TransportConfig) UpdateSoldViaBid(w http.ResponseWriter, r *http.Reques
 	}
 }
 
-// @Summary      Get product listings
-// @Description  Retrieves a paginated list of product listings for the authenticated user. Supports optional filtering by category and price range.
-// @Tags         listings
-// @Accept       json
-// @Produce      json
-// @Param        limit      query     int     true   "Number of listings per page"
-// @Param        page       query     int     true   "Page number to retrieve"
-// @Param        category   query     string  false  "Category to filter listings"
-// @Param        startprice query     string  false  "Minimum price filter"
-// @Param        endprice   query     string  false  "Maximum price filter"
-// @Param        creator   query     string  false  "the person who created the listing"
-// @Param        Authorization header string true "Access token"
-// @Success      200        {array}   models.Product   "List of product listings"
-// @Failure      400        {object}  errs.ErrorResponse "Bad request - missing or invalid parameters"
-// @Failure      500        {object}  errs.ErrorResponse "Internal server error"
-// @Router       /listings [GET]
+//	@Summary		Get product listings
+//	@Description	Retrieves a paginated list of product listings for the authenticated user. Supports optional filtering by category and price range.
+//	@Tags			listings
+//	@Accept			json
+//	@Produce		json
+//	@Param			limit			query		int					true	"Number of listings per page"
+//	@Param			page			query		int					true	"Page number to retrieve"
+//	@Param			category		query		string				false	"Category to filter listings"
+//	@Param			startprice		query		string				false	"Minimum price filter"
+//	@Param			endprice		query		string				false	"Maximum price filter"
+//	@Param			creator			query		string				false	"the person who created the listing"
+//	@Param			Authorization	header		string				true	"Access token"
+//	@Success		200				{array}		models.Product		"List of product listings"
+//	@Failure		400				{object}	errs.ErrorResponse	"Bad request - missing or invalid parameters"
+//	@Failure		500				{object}	errs.ErrorResponse	"Internal server error"
+//	@Router			/listings [GET]
 func (t *TransportConfig) GetListings(w http.ResponseWriter, r *http.Request) {
 	uid, err := middleware.GetTokenFromRequest(r)
 	if err != nil {
